update laravel dockerfile

--- a/nginx-laravel/Dockerfile
+++ b/nginx-laravel/Dockerfile
@@ -1,5 +1,8 @@
 FROM datadoglt/nginx:latest
 MAINTAINER "DataDog" <info@datadog.lt>
 
+# project volume
+VOLUME /var/www
+
 # Add default config
 COPY default.conf /etc/nginx/sites-enabled/nginx.conf
