--- a/php56/Dockerfile
+++ b/php56/Dockerfile
@@ -31,10 +31,7 @@ RUN yum install --enablerepo=remi,remi-php56 -y \
   && yum clean all
 
 # change permissions for default php session and wsdl cache directories
-RUN rm -rf /var/lib/php/* && \
-    mkdir /var/lib/php/{session,wsdlcache} && \
-    chmod -R 776 /var/lib/php  && \
-    chown www:www -R /var/lib/php
+RUN chown www:www -R /var/lib/php
 
 # set custom configuration
 RUN echo "date.timezone=UTC" > /etc/php.d/30-timezone.ini && \
