--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,21 +13,18 @@ events {
 }
 
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+    include             /etc/nginx/mime.types;
+    default_type        application/octet-stream;
+    log_format     main '$remote_addr - $remote_user [$time_local] "$request" '
+                        '$status $body_bytes_sent "$http_referer" '
+                        '"$http_user_agent" "$http_x_forwarded_for"';
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
-
-    access_log  /var/log/nginx/access.log  main;
-
-    sendfile        on;
-    #tcp_nopush     on;
-
-    keepalive_timeout  65;
-
-    #gzip  on;
+    access_log          /var/log/nginx/access.log  main;
+    error_log           stderr;
+    sendfile            on;
+    keepalive_timeout   65;
+    #tcp_nopush          on;
+    #gzip                on;
 
     include /etc/nginx/sites-enabled/*.conf;
 }
