--- a/php54/Dockerfile
+++ b/php54/Dockerfile
@@ -1,7 +1,12 @@
 FROM datadoglt/base:latest
 MAINTAINER "DataDog" <info@datadog.lt>
 
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+ENTRYPOINT ["/entrypoint.sh"]
 CMD /usr/sbin/php-fpm --nodaemonize
+
+WORKDIR /var/www
 
 EXPOSE 9000
 
@@ -9,21 +14,22 @@ EXPOSE 9000
 # if soap extension is missing it fails to launch fpm
 # related to soap wsdl cache dir in www.conf
 RUN yum install -y \
-  php-bcmath \
-  php-cli \
-  php-mcrypt \
-  php-curl \
-  php-fpm \
-  php-gd \
-  php-iconv \
-  php-intl \
-  php-mysql \
-  php-mbstring \
-  php-pdo \
-  php-process \
-  php-soap \
-  php-xml \
-  && yum clean all
+        git \
+        php-bcmath \
+        php-cli \
+        php-mcrypt \
+        php-curl \
+        php-fpm \
+        php-gd \
+        php-iconv \
+        php-intl \
+        php-mysql \
+        php-mbstring \
+        php-pdo \
+        php-process \
+        php-soap \
+        php-xml && \
+    yum clean all
 
 # change permissions for default php session and wsdl cache directories
 RUN mkdir -p /var/lib/php/session && \
@@ -44,4 +50,5 @@ COPY www.conf /etc/php-fpm.d/www.conf
 # install composer
 RUN curl -sS https://getcomposer.org/installer | php -- \
         --install-dir=/usr/bin \
-        --filename=composer
+        --filename=composer && \
+    composer config -g github-oauth.github.com 89fdb82a7b2c50bf20c39bfb87614acd68901e80
