--- a/php55/Dockerfile
+++ b/php55/Dockerfile
@@ -3,7 +3,12 @@ MAINTAINER "DataDog" <info@datadog.lt>
 
 ENV REMI_REPO http://rpms.famillecollet.com/enterprise/remi-release-7.rpm
 
-CMD /usr/sbin/php-fpm --nodaemonize 
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+ENTRYPOINT ["/entrypoint.sh"]
+CMD /usr/sbin/php-fpm --nodaemonize
+
+WORKDIR /var/www
 
 EXPOSE 9000
 
@@ -14,21 +19,22 @@ RUN yum install -y $REMI_REPO && yum clean all
 # if soap extension is missing it fails to launch fpm
 # related to soap wsdl cache dir in www.conf
 RUN yum install --enablerepo=remi,remi-php55 -y \
-  php-bcmath \
-  php-cli \
-  php-mcrypt \
-  php-curl \
-  php-fpm \
-  php-gd \
-  php-iconv \
-  php-intl \
-  php-mysql \
-  php-mbstring \
-  php-pdo \
-  php-process \
-  php-soap \
-  php-xml \
-  && yum clean all
+        git \
+        php-bcmath \
+        php-cli \
+        php-mcrypt \
+        php-curl \
+        php-fpm \
+        php-gd \
+        php-iconv \
+        php-intl \
+        php-mysql \
+        php-mbstring \
+        php-pdo \
+        php-process \
+        php-soap \
+        php-xml && \
+    yum clean all
 
 # change permissions for default php session and wsdl cache directories
 RUN chown www:www -R /var/lib/php/session && \
@@ -45,4 +51,5 @@ COPY www.conf /etc/php-fpm.d/www.conf
 # install composer
 RUN curl -sS https://getcomposer.org/installer | php -- \
         --install-dir=/usr/bin \
-        --filename=composer
+        --filename=composer && \
+    composer config -g github-oauth.github.com 89fdb82a7b2c50bf20c39bfb87614acd68901e80
