update nodejs in webtools

--- a/webtools/Dockerfile
+++ b/webtools/Dockerfile
@@ -4,9 +4,18 @@ MAINTAINER "DataDog" <info@datadog.lt>
 ENV GULP_TASK default
 ENV NPM_TASK start
 
+ENV NODE_VERSION v0.12.4
+
 # Install node.js
-RUN curl -sL https://rpm.nodesource.com/setup | bash - && \
-    yum install -y gcc-c++ make git nodejs
+RUN yum install -y gcc-c++ make git tar && yum clean -y all
+
+# Setup nodejs
+RUN curl -L http://nodejs.org/dist/$NODE_VERSION/node-$NODE_VERSION-linux-x64.tar.gz -O && \
+    tar xvf /node-$NODE_VERSION-linux-x64.tar.gz -C /usr/local/ && \
+    ln -s /usr/local/node-$NODE_VERSION-linux-x64/bin/node /usr/bin/node && \
+    ln -s /usr/local/node-$NODE_VERSION-linux-x64/bin/npm /usr/bin/npm && \
+    rm -f /node-$NODE_VERSION-linux-x64.tar.gz
+
 
 # Install gulp / bower / grunt globaly
 RUN npm install -g \
