use envplate templating in nginx config (allows customization through env variables, see readme's)

--- a/nginx-sf/Dockerfile
+++ b/nginx-sf/Dockerfile
@@ -1,8 +1,12 @@
 FROM datadoglt/nginx:latest
 MAINTAINER "DataDog" <info@datadog.lt>
 
+ENV APP_FILE "app_dev"
+ENV PHP_HOST "php"
+ENV PUB_DIR "web"
+
 # project volume
 VOLUME /var/www
 
 # Add default config
-COPY default.conf /etc/nginx/sites-enabled/symfony.conf
+COPY default.conf /etc/nginx/site-templates/symfony.conf
