--- a/nginx-sf/default.conf
+++ b/nginx-sf/default.conf
@@ -1,17 +1,18 @@
 server {
     server_name localhost "";
     listen 80 default_server;
-    root  /var/www/web;
+    root  /var/www/${PUB_DIR};
 
     location / {
         # try to serve file directly, fallback to app.php
-        try_files $uri /app_dev.php$is_args$args;
+        try_files $uri /${APP_FILE}.php$is_args$args;
     }
+
     # DEV
     # This rule should only be placed on your development environment
     # In production, don't include this and don't deploy app_dev.php or config.php
-    location ~ ^/(app_dev|config)\.php(/|$) {
-        fastcgi_pass php:9000;
+    location ~ ^/(${APP_FILE})\.php(/|$) {
+        fastcgi_pass ${PHP_HOST}:9000;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
