--- a/nginx-laravel/Dockerfile
+++ b/nginx-laravel/Dockerfile
@@ -1,8 +1,12 @@
 FROM datadoglt/nginx:latest
 MAINTAINER "DataDog" <info@datadog.lt>
 
+ENV APP_FILE "index"
+ENV PHP_HOST "php"
+ENV PUB_DIR "public"
+
 # project volume
 VOLUME /var/www
 
 # Add default config
-COPY default.conf /etc/nginx/sites-enabled/laravel.conf
+COPY default.conf /etc/nginx/site-templates/laravel.conf
