--- a/nginx-laravel/default.conf
+++ b/nginx-laravel/default.conf
@@ -1,11 +1,11 @@
 server {
     server_name localhost "";
     listen 80 default_server;
-    root  /var/www/public;
+    root  /var/www/${PUB_DIR};
 
     location / {
-        index index.php index.html index.htm;
-        try_files $uri $uri/ /index.php?$args;
+        index ${APP_FILE}.php index.html index.htm;
+        try_files $uri $uri/ /${APP_FILE}.php?$args;
     }
 
     location ~ \.php$
@@ -13,8 +13,8 @@ server {
         try_files $uri = 404;
 
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass    php:9000;
-        fastcgi_index   index.php;
+        fastcgi_pass    ${PHP_HOST}:9000;
+        fastcgi_index   ${APP_FILE}.php;
         fastcgi_param   SCRIPT_FILENAME $document_root$fastcgi_script_name;
 
         include fastcgi_params;
