change php to ondemand

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -3,7 +3,7 @@ MAINTAINER "DataDog" <info@datadog.lt>
 
 EXPOSE 80
 
-VOLUME ["/etc/nginx/sites-enabled", "/var/log/nginx", "/etc/nginx/certs"]
+VOLUME ["/var/log/nginx", "/etc/nginx/certs"]
 
 # Install nginx
 COPY nginx.repo /etc/yum.repos.d/nginx.repo
@@ -12,8 +12,10 @@ RUN yum -y install nginx --enablerepo=nginx && \
 
 # add envplate
 RUN curl -sLo /usr/local/bin/ep https://github.com/kreuzwerker/envplate/releases/download/v0.0.8/ep-linux && \
-    chmod +x /usr/local/bin/ep && \
-    mkdir /etc/nginx/site-templates
+    chmod +x /usr/local/bin/ep
+
+# add default dirs
+RUN mkdir /etc/nginx/site-templates && mkdir /etc/nginx/sites-enabled
 
 # Add default config
 COPY nginx.conf /etc/nginx/nginx.conf
