php70 memcached and redis extensions

--- a/php70/Dockerfile
+++ b/php70/Dockerfile
@@ -36,6 +36,8 @@ RUN yum install --enablerepo=remi,remi-php70 -y \
         php-pdo \
         php-process \
         php-soap \
+        php-memcached \
+        php-redis \
         php-xml && \
     yum clean all
 
