--- a/php70/Dockerfile
+++ b/php70/Dockerfile
@@ -26,6 +26,7 @@ RUN yum install --enablerepo=remi,remi-php70 -y \
         php-bcmath \
         php-cli \
         php-mcrypt \
+        php-memcached \
         php-curl \
         php-fpm \
         php-gd \
