--- a/webtools/Dockerfile
+++ b/webtools/Dockerfile
@@ -1,10 +1,12 @@
 FROM datadoglt/base
 MAINTAINER "DataDog" <info@datadog.lt>
 
-ENV GULP_TASK default
-ENV NPM_TASK start
+ENV BUILD_TASK ""
+ENV GRUNT_TASK ""
+ENV GULP_TASK ""
+ENV NPM_TASK ""
 
-ENV NODE_VERSION v0.12.4
+ENV NODE_VERSION v0.12.7
 
 # Install node.js
 RUN yum install -y gcc-c++ make git tar && yum clean -y all
@@ -19,13 +21,11 @@ RUN curl -L http://nodejs.org/dist/$NODE_VERSION/node-$NODE_VERSION-linux-x64.ta
 
 # Install gulp / bower / grunt globaly
 RUN npm install -g \
-        npm-ls-scripts \
         bower \
         gulp \
         grunt \
         grunt-cli
 
-ADD run.sh /usr/bin/run-webtools
-RUN chmod +x /usr/bin/run-webtools
+ADD run.sh /usr/bin/webtools
 
-CMD run-webtools
+CMD webtools
