--- a/nginx-laravel/default.conf
+++ b/nginx-laravel/default.conf
@@ -2,6 +2,7 @@ server {
     server_name localhost "";
     listen 80 default_server;
     root  /var/www/${PUB_DIR};
+    client_max_body_size ${UPLOAD_SIZE};
 
     location / {
         index ${APP_FILE}.php index.html index.htm;
