--- a/php71/Dockerfile
+++ b/php71/Dockerfile
@@ -26,7 +26,7 @@ RUN yum install --enablerepo=remi,remi-php71 -y \
         php-bcmath \
         php-cli \
         php-mcrypt \
-        php-memcached \
+        php-opcache \
         php-curl \
         php-fpm \
         php-gd \
