restart proxy always

--- a/proxy/docker-compose.yml
+++ b/proxy/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   nginx-proxy:
     image: jwilder/nginx-proxy
     container_name: nginx-proxy
+    restart: always
     ports:
       - "80:80"
     volumes:
